Update background images and modify CSS formatting for consistency

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- Header -->
       <header id="header">
         <div class="logo">
-          <span class="icon fa-gem"></span>
+          <span class="icon fa-id-card"></span>
         </div>
         <div class="content">
           <div class="inner">
@@ -54,7 +54,7 @@
         <article id="Career">
           <h2 class="major">Career</h2>
           <span class="image main"
-            ><img src="../html5up-dimension/images/84 copy.jpeg" alt=""
+            ><img src="images/84_copy.jpeg" alt=""
           /></span>
           <p>
             Transitioning into data analysis and data engineering, building on
@@ -89,7 +89,7 @@
           >
           <span class="image main"
             ><img
-              src="../html5up-dimension/images/online-marketing-hIgeoQjS_iE-unsplash.jpg"
+              src="images/online-marketing-hIgeoQjS_iE-unsplash.jpg"
               alt=""
           /></span>
           <p>
@@ -111,7 +111,7 @@
           >
           <span class="image main"
             ><img
-              src="../html5up-dimension/images/mike-petrucci-c9FQyqIECds-unsplash.jpg"
+              src="images/mike-petrucci-c9FQyqIECds-unsplash.jpg"
               alt=""
           /></span>
           <p>
