--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
             >Github</a
           >
           <span class="image main"
-            ><img
-              src="images/online-marketing-hIgeoQjS_iE-unsplash.jpg"
-              alt=""
+            ><img src="images/online-marketing-hIgeoQjS_iE-unsplash.jpg" alt=""
           /></span>
           <p>
             The objective of this study was to analyze a dataset of 270,000
@@ -110,9 +108,7 @@
             >Github</a
           >
           <span class="image main"
-            ><img
-              src="images/mike-petrucci-c9FQyqIECds-unsplash.jpg"
-              alt=""
+            ><img src="images/mike-petrucci-c9FQyqIECds-unsplash.jpg" alt=""
           /></span>
           <p>
             The goal of this project is to showcase database management, SQL,
@@ -121,6 +117,30 @@
             Heirloom. Designed a database from scratch to provide tools
             necessary for order tracking, inventory management, and customer
             insight, etc.
+          </p>
+
+          <h3>
+            Project 3 - Supply Chain Optimization (Logistics and Inventory)-
+          </h3>
+          <a
+            href="https://github.com/kchabau/Supply-Chain-Optimization--Logistics-and-Inventory-"
+            target="_blank"
+            >Github</a
+          >
+          <span class="image main"
+            ><img src="images/supply_chain.jpg" alt=""
+          /></span>
+          <p>
+            Supply chain analytics plays a crucial role in data-driven
+            decision-making across industries like manufacturing, retail,
+            healthcare, and logistics. It involves collecting, analyzing, and
+            interpreting data on the flow of products and services from
+            suppliers to customers. This project focuses on optimizing supply
+            chain operations, including logistics and inventory management,
+            through data-driven insights. Using SQL, I analyze data related to
+            order fulfillment rates, warehouse efficiency, and transportation
+            costs to enhance supply chain performance and reduce operational
+            bottlenecks.
           </p>
         </article>
 
@@ -178,9 +198,7 @@
             </li>
           </ul>
         </article>
-
-  
-	</div>
+      </div>
 
       <!-- Footer -->
       <footer id="footer">
