--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </p>
 
           <h3>
-            Project 3 - Supply Chain Optimization (Logistics and Inventory)-
+            Project 3 - Supply Chain Optimization (Logistics and Inventory)
           </h3>
           <a
             href="https://github.com/kchabau/Supply-Chain-Optimization--Logistics-and-Inventory-"
