Fix project title formatting in index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             data analysis skills in the field of cardiovascular health.
           </p>
 
-          <h3>Project 2 - E-Commerce-Heirloom-</h3>
+          <h3>Project 2 - E-Commerce Heirloom</h3>
           <a
             href="https://github.com/kchabau/E-Commerce--Heirloom-"
             target="_blank"
