--- a/index.html
+++ b/index.html
@@ -142,6 +142,21 @@
             costs to enhance supply chain performance and reduce operational
             bottlenecks.
           </p>
+
+          <h3>
+            Project 4 - Inventory Management Systems Database
+          </h3>
+          <a
+            href="https://github.com/kchabau/Inventory_Management_System_Database"
+            target="_blank"
+            >Github</a
+          >
+          <span class="image main"
+            ><img src="images/main1.jpg" alt=""
+          /></span>
+          <p>
+            I build a database schema that could be used to organize an inventory of mechanical parts. The schema will keep track of all the parts, their manaufacturer, category, location in storeroom, available inventory, and other relevant information.
+          </p>
         </article>
 
         <!-- About -->
