--- a/index.html
+++ b/index.html
@@ -140,22 +140,40 @@
             through data-driven insights. Using SQL, I analyze data related to
             order fulfillment rates, warehouse efficiency, and transportation
             costs to enhance supply chain performance and reduce operational
-            bottlenecks.
+            bottlenecks. ShoeFly is performing an A/B Test. They have two
+            different versions of an ad, which they have placed in emails, as
+            well as in banner ads on Facebook, Twitter, and Google. They want to
+            know how the two ads are performing on each of the different
+            platforms on each day of the week.
           </p>
 
-          <h3>
-            Project 4 - Inventory Management Systems Database
-          </h3>
+          <h3>Project 4 - Inventory Management Systems Database</h3>
           <a
             href="https://github.com/kchabau/Inventory_Management_System_Database"
             target="_blank"
             >Github</a
           >
-          <span class="image main"
-            ><img src="images/main1.jpg" alt=""
-          /></span>
+          <span class="image main"><img src="images/main1.jpg" alt="" /></span>
           <p>
-            I build a database schema that could be used to organize an inventory of mechanical parts. The schema will keep track of all the parts, their manaufacturer, category, location in storeroom, available inventory, and other relevant information.
+            I build a database schema that could be used to organize an
+            inventory of mechanical parts. The schema will keep track of all the
+            parts, their manaufacturer, category, location in storeroom,
+            available inventory, and other relevant information.
+          </p>
+
+          <h3>Project 5 - A/B Testing</h3>
+          <a
+            href="https://github.com/kchabau/A-B_Testing_For_ShoeFly"
+            target="_blank"
+            >Github</a
+          >
+          <span class="image main"><img src="images/main2.jpg" alt="" /></span>
+          <p>
+            ShoeFly is performing an A/B Test. They have two different versions
+            of an ad, which they have placed in emails, as well as in banner ads
+            on Facebook, Twitter, and Google. They want to know how the two ads
+            are performing on each of the different platforms on each day of the
+            week.
           </p>
         </article>
 
