Updated description on project. There was an incorrect sentence placement

--- a/index.html
+++ b/index.html
@@ -140,11 +140,7 @@
             through data-driven insights. Using SQL, I analyze data related to
             order fulfillment rates, warehouse efficiency, and transportation
             costs to enhance supply chain performance and reduce operational
-            bottlenecks. ShoeFly is performing an A/B Test. They have two
-            different versions of an ad, which they have placed in emails, as
-            well as in banner ads on Facebook, Twitter, and Google. They want to
-            know how the two ads are performing on each of the different
-            platforms on each day of the week.
+            bottlenecks.
           </p>
 
           <h3>Project 4 - Inventory Management Systems Database</h3>
