Added new project to portfolio

--- a/index.html
+++ b/index.html
@@ -171,6 +171,23 @@
             are performing on each of the different platforms on each day of the
             week.
           </p>
+
+          <h3>Project 6 - Analyzing E-Commerce Sales Data with Python</h3>
+          <a
+            href="https://github.com/kchabau/E-Commerce_Sales_Dataset?tab=readme-ov-file"
+            target="_blank"
+            >Github</a
+          >
+          <span class="image main"><img src="images/code.png" alt="" /></span>
+          <p>
+            In this project, I analyze e-commerce sales data from a CSV file,
+            focusing on trends in product sales across various categories,
+            cities, and states. The project also highlights B2B
+            (Business-to-Business) sales performance to provide actionable
+            insights. Using tools such as **Pandas**, **Numpy**, and
+            **Matplotlib** in Python, the goal is to uncover significant
+            patterns in sales and provide data-driven recommendations.
+          </p>
         </article>
 
         <!-- About -->
