updated portfolio with project 7

--- a/index.html
+++ b/index.html
@@ -188,6 +188,22 @@
             **Matplotlib** in Python, the goal is to uncover significant
             patterns in sales and provide data-driven recommendations.
           </p>
+
+          <h3>Project 7 - Crime Data ETL</h3>
+          <a href="https://github.com/kchabau/Crime_In_Colorado" target="_blank"
+            >Github</a
+          >
+          <span class="image main"
+            ><img src="images/tableau_screenshot_1.png" alt=""
+          /></span>
+          <p>
+            Developed a full end-to-end ETL pipeline and interactive Tableau
+            dashboard to analyze over 3.5 million crime records across Colorado
+            from 2016 to 2023. This project involved cleaning and transforming
+            raw public data using Python (pandas, numpy, scikit-learn), imputing
+            missing values with advanced techniques like multiple imputation,
+            and loading the data into a MySQL database for structured analysis.
+          </p>
         </article>
 
         <!-- About -->
