--- a/index.html
+++ b/index.html
@@ -81,27 +81,23 @@
             and deliver actionable solutions for a better tomorrow.
           </p>
 
-          <h3>Project 1 - Correlational Analysis of Cardiac Health Metrics</h3>
-          <a
-            href="https://github.com/kchabau/Correlational-Analysis-of-Cardiac-Health-Metrics-Jan-2025-Project"
-            target="_blank"
+          <h3>Crime Data ETL</h3>
+          <a href="https://github.com/kchabau/Crime_In_Colorado" target="_blank"
             >Github</a
           >
           <span class="image main"
-            ><img src="images/online-marketing-hIgeoQjS_iE-unsplash.jpg" alt=""
+            ><img src="images/tableau_screenshot_1.png" alt=""
           /></span>
           <p>
-            The objective of this study was to analyze a dataset of 270,000
-            patients with reported heart disease to identify correlations
-            between various metrics and cardiac health. Through structured data
-            analysis, key demographic and behavioral factors are investigated to
-            uncover potential risk contributors. This research also served as an
-            illustration of practical application of SQL and data visualization
-            techniques (created Tableau Dashboard in correlation), advancing
-            data analysis skills in the field of cardiovascular health.
+            Developed a full end-to-end ETL pipeline and interactive Tableau
+            dashboard to analyze over 3.5 million crime records across Colorado
+            from 2016 to 2023. This project involved cleaning and transforming
+            raw public data using Python (pandas, numpy, scikit-learn), imputing
+            missing values with advanced techniques like multiple imputation,
+            and loading the data into a MySQL database for structured analysis.
           </p>
 
-          <h3>Project 2 - E-Commerce Heirloom</h3>
+          <h3>E-Commerce Heirloom</h3>
           <a
             href="https://github.com/kchabau/E-Commerce--Heirloom-"
             target="_blank"
@@ -119,9 +115,7 @@
             insight, etc.
           </p>
 
-          <h3>
-            Project 3 - Supply Chain Optimization (Logistics and Inventory)
-          </h3>
+          <h3>Supply Chain Optimization (Logistics and Inventory)</h3>
           <a
             href="https://github.com/kchabau/Supply-Chain-Optimization--Logistics-and-Inventory-"
             target="_blank"
@@ -143,7 +137,27 @@
             bottlenecks.
           </p>
 
-          <h3>Project 4 - Inventory Management Systems Database</h3>
+          <h3>Correlational Analysis of Cardiac Health Metrics</h3>
+          <a
+            href="https://github.com/kchabau/Correlational-Analysis-of-Cardiac-Health-Metrics-Jan-2025-Project"
+            target="_blank"
+            >Github</a
+          >
+          <span class="image main"
+            ><img src="images/online-marketing-hIgeoQjS_iE-unsplash.jpg" alt=""
+          /></span>
+          <p>
+            The objective of this study was to analyze a dataset of 270,000
+            patients with reported heart disease to identify correlations
+            between various metrics and cardiac health. Through structured data
+            analysis, key demographic and behavioral factors are investigated to
+            uncover potential risk contributors. This research also served as an
+            illustration of practical application of SQL and data visualization
+            techniques (created Tableau Dashboard in correlation), advancing
+            data analysis skills in the field of cardiovascular health.
+          </p>
+
+          <h3>Inventory Management Systems Database</h3>
           <a
             href="https://github.com/kchabau/Inventory_Management_System_Database"
             target="_blank"
@@ -157,7 +171,7 @@
             available inventory, and other relevant information.
           </p>
 
-          <h3>Project 5 - A/B Testing</h3>
+          <h3>A/B Testing</h3>
           <a
             href="https://github.com/kchabau/A-B_Testing_For_ShoeFly"
             target="_blank"
@@ -172,7 +186,7 @@
             week.
           </p>
 
-          <h3>Project 6 - Analyzing E-Commerce Sales Data with Python</h3>
+          <h3>Analyzing E-Commerce Sales Data with Python</h3>
           <a
             href="https://github.com/kchabau/E-Commerce_Sales_Dataset?tab=readme-ov-file"
             target="_blank"
@@ -187,22 +201,6 @@
             insights. Using tools such as **Pandas**, **Numpy**, and
             **Matplotlib** in Python, the goal is to uncover significant
             patterns in sales and provide data-driven recommendations.
-          </p>
-
-          <h3>Project 7 - Crime Data ETL</h3>
-          <a href="https://github.com/kchabau/Crime_In_Colorado" target="_blank"
-            >Github</a
-          >
-          <span class="image main"
-            ><img src="images/tableau_screenshot_1.png" alt=""
-          /></span>
-          <p>
-            Developed a full end-to-end ETL pipeline and interactive Tableau
-            dashboard to analyze over 3.5 million crime records across Colorado
-            from 2016 to 2023. This project involved cleaning and transforming
-            raw public data using Python (pandas, numpy, scikit-learn), imputing
-            missing values with advanced techniques like multiple imputation,
-            and loading the data into a MySQL database for structured analysis.
           </p>
         </article>
 
